# rover_control

./: README.md
hugin_panorama/: README.md  package.xml
hugin_panorama/launch/: hugin_panorama.launch
hugin_panorama/src/hugin_panorama/: hugin_panorama.py
msg_to_antenna/src/: gps_to_antenna.py  test_server.py
rover_cam/: CMakeLists.txt  README.md  package.xml
rover_cam/src/: panorama_node.py
rover_control/: CMakeLists.txt  README.md  package.xml
rover_control/config/: aggregator.yaml  global_ekf_localization.yaml  local_ekf_localization.yaml  watchdog.yaml
rover_control/launch/: control.launch  gps.launch  gps_heading.launch  rover.launch  teleop_joystick.launch
rover_control/src/: camera_control_server.cpp  cmd_mux.py  gps_heading.py  gps_node.cpp  science_control.cpp  sensor_watchdog.py  teleop_joystick.py
rover_description/urdf/: camera.urdf.xacro  camera_test.urdf.xacro  rover.urdf.xacro  stereo_camera.urdf.xacro
rover_gazebo/: README.md
rover_gazebo/launch/: rover_clearpath_playpen.launch  spawn_rover.launch
rover_nav/: CMakeLists.txt  README.md  gpsGoals.txt  mapvizconfig.mvc  package.xml
rover_nav/config/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml
rover_nav/launch/: mini-rover.launch  move_base.launch  navTest_base.launch  navTest_rover.launch  simulation.launch
rover_nav/src/: geopoint.py  gpsGoals.txt  navigation.py  parsePathServer.py  pathMgr.py  rover_pose.py  rover_sim.py  sim_gps.py
rover_viz/launch/: mapviz.launch
rover_viz/rviz/: robot.rviz
