<?xml version="1.0"?>
<package format="2">
  <name>hugin_panorama</name>
  <version>0.1.0</version>
  <description>
      Create panoramas in ROS using image snapshots or multiple video streams.
  </description>
  <maintainer email="danielsnider12@gmail.com">Daniel Snider</maintainer>
  <author email="danielsnider12@gmail.com">Daniel Snider</author>
  <license>Unlicense</license>
  <url type="website">http://wiki.ros.org/hugin_panorama</url>
  <url type="repository">https://github.com/danielsnider/hugin_panorama</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_view</depend>
  <depend>cv_bridge</depend>
  <depend>python-opencv</depend>
  <depend>hugin-tools</depend>
  <depend>enblend</depend>
  <depend>imagemagick</depend>

</package>
