<?xml version="1.0"?>
<package format="2">
  <name>rover_cam</name>
  <version>0.0.0</version>
  <description>The rover_cam package</description>

  <maintainer email="simon@todo.todo">simon</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>python-opencv</depend>
  <depend>cv_bridge</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
