<?xml version="1.0"?>
<package format="2">
  <name>rover_control</name>
  <version>0.0.0</version>
  <description>The rover_control package</description>

  <maintainer email="simon@todo.todo">simon</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>robot_localization</depend>
  <depend>teleop_twist_joy</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>robot_state_publisher</depend>
  <depend>joy</depend>
  <depend>message_runtime</depend>
  <depend>rosserial_arduino</depend>
  <depend>realsense2_camera</depend>
  <depend>realsense2_camera_description</depend>
  <depend>rgbd_launch</depend>
  <depend>video_stream_opencv</depend>
  <depend>image_proc</depend>
  <depend>multimaster_fkie</depend>

</package>
